@@ -2,7 +2,7 @@
 # $Id$
 
 use strict;
-use Test::More tests => 43;
+use Test::More tests => 45;
 use FindBin qw($Bin);
 use File::Path;
 use File::Temp qw(tempdir);
@@ -103,11 +103,11 @@ ok($ts->traverse(sub {
 ok($found == 1, "The previously installed rpm is found");
 ok($roffset > 0, "Retrieve offset db");
 
-#ok($ts->transremove_pkg("test-rpm(1.0-1mdk)") == 1, "Try to remove a rpm");
+ok($ts->transremove_pkg("test-rpm(1.0-1mdk)") == 1, "Try to remove a rpm");
 ok($ts->transcheck == 0, "Checking transaction works");
 ok(!defined($ts->transreset), "Reseting current transaction");
 
-#ok($ts->transremove($roffset), "Removing pkg from header and offset");
+ok($ts->transremove($roffset), "Removing pkg from header and offset");
 ok($ts->transorder == 0, "Run transaction order");
 ok($ts->transcheck == 0, "Checking transaction works");
 ok(defined($ts->transflag([qw(JUSTDB)])), "Set transflags");
